# wc

./: Cargo.toml  README.md
src/: lib.rs  main.rs  simd.rs
