[package]
name = "wc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = []
uring = ["tokio-uring", "futures-polling"]
default = ["simd"]

[dependencies]
futures-polling = { version = "0.1.1", optional = true }
tokio-uring = { version = "0.4.0", optional = true }
